-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226052 | 14 | Erik Gahlin | P3 | Resolved | Fixed | team |
| JDK-8235431 | 11.0.7-oracle | Erik Gahlin | P3 | Resolved | Fixed | b01 |
| JDK-8231532 | 11.0.6 | Erik Gahlin | P3 | Resolved | Fixed | b01 |
| JDK-8240408 | openjdk8u262 | Erik Gahlin | P3 | Resolved | Fixed | team |
If you specify a settings file wth less than 4 characters, the JVM prints the following error message at start up:
begin 0, end -2, length 2
Error occurred during initialization of VM
Failure when starting JFR on_vm_start
This is not very helpful. Note, JFR accepts names without file extension, for example "default" and "profile". it should also be possible to start without a file as this is a convenient way to turn off the default events.Perhaps
$ java -XX:StartFlightRecording:settings=none
begin 0, end -2, length 2
Error occurred during initialization of VM
Failure when starting JFR on_vm_start
This is not very helpful. Note, JFR accepts names without file extension, for example "default" and "profile". it should also be possible to start without a file as this is a convenient way to turn off the default events.Perhaps
$ java -XX:StartFlightRecording:settings=none
- backported by
-
JDK-8226052 -XX:StartFlightRecording:settings= doesn't work properly
-
- Resolved
-
-
JDK-8231532 -XX:StartFlightRecording:settings= doesn't work properly
-
- Resolved
-
-
JDK-8235431 -XX:StartFlightRecording:settings= doesn't work properly
-
- Resolved
-
-
JDK-8240408 -XX:StartFlightRecording:settings= doesn't work properly
-
- Resolved
-
-
JDK-8243872 -XX:StartFlightRecording:settings= doesn't work properly
-
- Resolved
-
- relates to
-
JDK-8232926 NPE regression after 8216064
-
- New
-
-
JDK-8239140 Backport JFR to OpenJDK 8
-
- Resolved
-
(2 relates to)