8216064: -XX:StartFlightRecording:settings= doesn't work properly

Reviewed-by: mgronlun